--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,17 +15,17 @@
         android:theme="@style/Theme.AeroLuggage"
         tools:targetApi="31">
         <activity
-            android:name=".RoomHistoryScreen"
+            android:name=".ui.screens.RoomHistoryScreen"
             android:exported="false" />
-        <activity android:name=".TagListActivity" />
+        <activity android:name=".ui.screens.TagListActivity" />
         <activity
-            android:name=".JsonUtils"
-            android:exported="false" />
-        <activity
-            android:name=".ActivityDrawer"
+            android:name=".utils.JsonUtils"
             android:exported="false" />
         <activity
-            android:name=".BarcodeScreen"
+            android:name=".ui.main.ActivityDrawer"
+            android:exported="false" />
+        <activity
+            android:name=".ui.screens.BarcodeScreen"
             android:exported="false" />
         <activity
             android:name=".bag_history_screen"
@@ -34,12 +34,12 @@
             android:name=".room_Select"
             android:exported="false" />
         <activity
-            android:name=".LoginScreen"
+            android:name=".ui.screens.LoginScreen"
             android:exported="false"
             android:label="@string/app_name"
             android:theme="@style/Theme.AeroLuggage" />
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.main.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
