--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
         tools:targetApi="31">
         <activity
             android:name=".ui.screens.RoomHistoryScreen"
-            android:parentActivityName=".ui.screens.BarcodeScreen">
+            android:parentActivityName=".ui.screens.BarcodeScreen"
+            android:exported="false">
 <!--            android:exported="false">-->
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
