--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AeroLuggage"
-        tools:targetApi="31">
+        tools:targetApi="31"
+        android:theme="@style/Theme.AeroLuggage">
+
         <activity
             android:name=".ui.screens.RoomHistoryScreen"
             android:parentActivityName=".ui.screens.BarcodeScreen"
